<resources>
    <string name="app_name">Star Wars</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="currency">R$:  </string>
    <string name="user">User:  </string>
    <string name="email">Email:  </string>
    <string name="finalize_shopping">Finalize Shopping</string>
    <string name="transactions">Transactions</string>
    <string name="check_your_connection">No network. Please check you internet connection.</string>
    <string name="title_activity_checkout">CheckoutActivity</string>
    <string name="chart_title">Chart</string>
    <string name="no_products">No products selected</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="added_to_chart">Added to chart</string>
    <string name="title_activity_payment">PaymentActivity</string>
    <string name="card_number">Card Number</string>
    <string name="name">Name</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv">CVV</string>
    <string name="btnPay">Pay</string>
    <string name="total">Total R$</string>
    <string name="payment_data_title">Payment data</string>
</resources>
